RESOLVED FIXED84656
[V8] Pass Isolate to setDOMException() (Part1)
https://bugs.webkit.org/show_bug.cgi?id=84656
Summary [V8] Pass Isolate to setDOMException() (Part1)
Kentaro Hara
Reported 2012-04-23 17:10:30 PDT
The objective is to pass Isolate around in V8 bindings. In this bug we pass Isolate to setDOMException() in custom binding code. The work will continue to Part3 or so.
Attachments
Patch (15.86 KB, patch)
2012-04-23 17:13 PDT, Kentaro Hara
no flags
Kentaro Hara
Comment 1 2012-04-23 17:13:38 PDT
WebKit Review Bot
Comment 2 2012-04-24 09:06:55 PDT
Comment on attachment 138465 [details] Patch Clearing flags on attachment: 138465 Committed r115067: <http://trac.webkit.org/changeset/115067>
WebKit Review Bot
Comment 3 2012-04-24 09:07:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.