Source/WebCore/bindings/v8/custom/V8SQLTransactionSyncCustom.cpp
@@ -92,7 +92,7 @@ v8::Handle<v8::Value> V8SQLTransactionSync::executeSqlCallback(const v8::Argumen
 
     ExceptionCode ec = 0;
     v8::Handle<v8::Value> result = toV8(transaction->executeSQL(statement, sqlValues, ec), args.GetIsolate());
-    V8Proxy::setDOMException(ec);
+    V8Proxy::setDOMException(ec, args.GetIsolate());
 
     return result;
 }
